--- a/progetti/lamm2.html
+++ b/progetti/lamm2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Stile Olivetti</title>
+    <title>Giocattoli</title>
 </head>
 <body>
      <!-- Logo e Nav principale -->
@@ -32,8 +32,8 @@
 
 <main>
     <section class="testo-progetto">
-    <h2>Giocattoli</h2> <!-- MODIFICARE -->
-    <p>Un bel poster per laRinascente con un'illustrazione di Lora Lamm che mostra una marionetta di Babbo Natale smontata. Il testo recita: “Anticipa lo shopping natalizio”. Stampato a Milano da Industria Grafica Ugo Riboldi.
+    <h2>La Rinascente</h2> <!-- MODIFICARE -->
+    <p>Un bel poster per la Rinascente con un'illustrazione di Lora Lamm che mostra una marionetta di Babbo Natale smontata. Il testo recita: “Anticipa lo shopping natalizio”. Stampato a Milano da Industria Grafica Ugo Riboldi.
     </p> <!-- MODIFICARE -->
     </section>
     
