--- a/progetti/lamm3.html
+++ b/progetti/lamm3.html
@@ -32,7 +32,7 @@
 
 <main>
     <section class="testo-progetto">
-    <h2>Giocattoli</h2> <!-- MODIFICARE -->
+    <h2>La Rinascente</h2> <!-- MODIFICARE -->
     <p>Uno di una serie di poster orientativi per la sezione uomo de La Rinascente. L'orientamento verticale del marchio suggerisce che il dipartimento si trova al piano superiore. Il testo recita: “Vestirsi per la regia”. Stampato a Milano da Industria Grafica Ugo Riboldi.
 
     </p> <!-- MODIFICARE -->
