--- a/progetti/lamm4.html
+++ b/progetti/lamm4.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Stile Olivetti</title>
+    <title>La Rinascente</title>
 </head>
 <body>
      <!-- Logo e Nav principale -->
@@ -32,7 +32,7 @@
 
 <main>
     <section class="testo-progetto">
-    <h2>Giocattoli</h2> <!-- MODIFICARE -->
+    <h2>La Rinascente</h2> <!-- MODIFICARE -->
     <p>“La moda si diffonde con LaRinascente”, celebre manifesto disegnato e illustrato da Lora Lamm con una serie di eleganti silhouette.
 
     </p> <!-- MODIFICARE -->
