--- a/progetti/monguzzi1.html
+++ b/progetti/monguzzi1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Stile Olivetti</title>
+    <title>Museo di Lugano</title>
 </head>
 <body>
      <!-- Logo e Nav principale -->
@@ -32,7 +32,7 @@
 
 <main>
     <section class="testo-progetto">
-    <h2>Museo si Lugano</h2> <!-- MODIFICARE -->
+    <h2>Museo di Lugano</h2> <!-- MODIFICARE -->
     <p>
         Questo poster è per una mostra che ha esplorato i progetti per i musei di arte e architettura. Monguzzi utilizza forme e piani semplici che si intersecano e caratteri posizionati strategicamente per creare la profondità di uno spazio architettonico pur sottolineando il piano piatto del manifesto.
         In calce al manifesto l'elegante logo tipografico Monguzzi disegnato per il museo.
