--- a/progetti/mari3.html
+++ b/progetti/mari3.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Almanacco Anti-Letterario di Bompiani</title>
+    <title>Sedia 1:1</title>
 </head>
 <body>
      <!-- Logo e Nav principale -->
@@ -32,7 +32,7 @@
 
 <main>
     <section class="testo-progetto">
-    <h2>Sesia 1:1</h2>
+    <h2>Sedia 1:1</h2>
     <p>Questa sedia è diventata un'icona del design contemporaneo. Semplice ed essenziale, è realizzata in legno con un'attenzione particolare ai dettagli funzionali e strutturali.</p>
     </section>
     
