--- a/projects.html
+++ b/projects.html
@@ -395,25 +395,7 @@
           <p> <strong>Guaiacalcium Efedrina </strong><br>Franco Grignani, 1953 <br>Manifesto</p> 
       </div>
      
-      <div class="foto foto2">
-        <a href="progetti/schawinsky1.html"> <img src="immagini/Schawinsky/1.webp" alt=""> </a>
-        <p> <strong>La Rivista - Sì</strong><br>Xanti Schawinsky, 1934 <br>Manifesto </p>
-    </div>
-
-    <div class="foto foto2">
-        <a href="progetti/schawinsky2.html"> <img src="immagini/Schawinsky/2.webp" alt=""> </a>
-        <p> <strong>Illy Caffé</strong><br>Xanti Schawinsky, 1934 <br>Manifesto </p>
-    </div>
-
-    <div class="foto foto2">
-        <a href="progetti/schawinsky4.html"> <img src="immagini/Schawinsky/4.webp" alt=""> </a>
-        <p> <strong>Princeps</strong><br>Xanti Schawinsky, 1934 <br>Manifesto </p>
-    </div>
-
-    <div class="foto foto2">
-        <a href="progetti/schawinsky6.html"> <img src="immagini/Schawinsky/6.webp" alt=""> </a>
-        <p> <strong>Olivetti MP1</strong><br>Xanti Schawinsky, 1932 <br>Manifesto </p>
-    </div>
+      
 
       <div class="foto foto2">
         <a href="progetti/nizzoli5.html"> <img src="immagini/nizzoli/nizzoli5.webp" alt=""> </a>
@@ -484,27 +466,27 @@
     </div>
 
     <div class="foto foto4">
-        <a href="../progetti/noorda1.html"> <img src="immagini/noorda/noorda1.webp" alt=""> </a>
+        <a href="progetti/noorda1.html"> <img src="immagini/noorda/noorda1.webp" alt=""> </a>
         <p> <strong>Metro di Milano</strong><br>Bob Noorda, 1963 <br>Marchio </p>
     </div>
 
     <div class="foto foto4">
-        <a href="../progetti/noorda2.html"> <img src="immagini/noorda/noorda2.webp" alt=""> </a>
+        <a href="progetti/noorda2.html"> <img src="immagini/noorda/noorda2.webp" alt=""> </a>
         <p> <strong>Agip</strong><br>Bob Noorda, 1972 <br>Marchio </p>
     </div>
 
     <div class="foto foto4">
-        <a href="../progetti/noorda3.html"> <img src="immagini/noorda/noorda3.webp" alt=""> </a>
+        <a href="progetti/noorda3.html"> <img src="immagini/noorda/noorda3.webp" alt=""> </a>
         <p> <strong>Regione Lombardia</strong><br>Bob Noorda, 1974 <br>Marchio </p>
     </div>
 
     <div class="foto foto4">
-        <a href="../progetti/noorda4.html"> <img src="immagini/noorda/noorda4.webp" alt=""> </a>
+        <a href="progetti/noorda4.html"> <img src="immagini/noorda/noorda4.webp" alt=""> </a>
         <p> <strong>Feltrinelli</strong><br>Bob Noorda, 1981 <br>Marchio </p>
     </div>
 
     <div class="foto foto4">
-        <a href="../progetti/noorda5.html"> <img src="immagini/noorda/noorda5.webp" alt=""> </a>
+        <a href="progetti/noorda5.html"> <img src="immagini/noorda/noorda5.webp" alt=""> </a>
         <p> <strong>Biennale di Venezia</strong><br>Bob Noorda, 1966 <br>Marchio </p>
     </div>
 
