--- a/designers/vivarelli.html
+++ b/designers/vivarelli.html
@@ -58,12 +58,12 @@
 
             <div class="card">
                 <a href="../progetti/vivarelli2.html"> <img src="../immagini/vivarelli/2.webp" alt=""> </a>
-                <p> <strong>Ostelin</strong><br>Carlo Vivarelli, 1946 <br>Editoria </p>
+                <p> <strong>Ostelin 800</strong><br>Carlo Vivarelli, 1946 <br>Editoria </p>
             </div>
             
             <div class="card">
                 <a href="../progetti/vivarelli3.html"> <img src="../immagini/vivarelli/3.webp" alt=""> </a>
-                <p> <strong>Ostelin</strong><br>Carlo Vivarelli, 1946 <br>Editoria </p>
+                <p> <strong>Calcio Colloidale</strong><br>Carlo Vivarelli, 1946 <br>Editoria </p>
             </div>
             
             <div class="card">
