--- a/projects.html
+++ b/projects.html
@@ -119,12 +119,12 @@
 
         <div class="foto foto1">
             <a href="progetti/vivarelli2.html"> <img src="immagini/vivarelli/2.webp" alt=""> </a>
-            <p> <strong>Ostelin</strong><br>Carlo Vivarelli, 1946 <br>Copertina </p>
+            <p> <strong>Ostelin 800</strong><br>Carlo Vivarelli, 1946 <br>Copertina </p>
         </div>
 
         <div class="foto foto1">
             <a href="progetti/vivarelli3.html"> <img src="immagini/vivarelli/3.webp" alt=""> </a>
-            <p> <strong>Ostelin</strong><br>Carlo Vivarelli, 1946 <br>Copertina </p>
+            <p> <strong>Calcio Colloidale</strong><br>Carlo Vivarelli, 1946 <br>Copertina </p>
         </div>
 
 
