--- a/progetti/vivarelli1.html
+++ b/progetti/vivarelli1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Ostelin</title>
+    <title>Ostelin 800</title>
 </head>
 <body>
      <!-- Logo e Nav principale -->
@@ -32,9 +32,9 @@
 
 <main>
     <section class="testo-progetto">
-    <h2>Ostelin</h2> <!-- MODIFICARE -->
-    <p>Uno di una serie di volantini farmaceutici rivolti ai medici che Vivarelli ha ideato come art director dello Studio Boggeri, promuovendo tre prodotti dello stesso gruppo: Ostelin, Ostelin 25 e Ostelin 800. Ecco il motivo dei tre cerchi.
-    </p> <!-- MODIFICARE -->
+        <h2>Ostelin</h2> <!-- MODIFICARE -->
+        <p>Uno di una serie di volantini farmaceutici rivolti ai medici che Vivarelli ha ideato come art director dello Studio Boggeri, promuovendo tre prodotti dello stesso gruppo: Ostelin, Ostelin 25 e Ostelin 800. Ecco il motivo dei tre cerchi.
+        </p> <!-- MODIFICARE -->
     </section>
     
     
@@ -48,25 +48,26 @@
         <h2>Altri Progetti</h2>
         <div class="grid">
             <div class="card">
-                <a href="vivarelli2.html"> <img src="../immagini/vivarelli/2.webp" alt=""> </a>
-                <p> <strong>Ostelin</strong><br>Carlo Vivarelli, 1946 <br>Editoria </p>
-            </div>
-            <div class="card">
-                <a href="vivarelli3.html"> <img src="../immagini/vivarelli/3.webp" alt=""> </a>
-                <p> <strong>Ostelin</strong><br>Carlo Vivarelli, 1946 <br>Editoria </p>
-            </div>
-            <div class="card">
-                <a href="vivarelli4.html"> <img src="../immagini/vivarelli/4.webp" alt=""> </a>
-                <p> <strong>Minadex</strong><br>Carlo Vivarelli, 1946 <br>Editoria </p>
-            </div>
-            <div class="card">
-                <a href="vivarelli5.html"> <img src="../immagini/vivarelli/5.webp" alt=""> </a>
-                <p> <strong>Adexolin</strong><br>Carlo Vivarelli, 1946 <br>Editoria </p>
-            </div>
-            <div class="card">
-                <a href="vivarelli6.html"> <img src="../immagini/vivarelli/6.webp" alt=""> </a>
-                <p> <strong>Vitaplex</strong><br>Carlo Vivarelli, 1946 <br>Editoria </p>
-            </div>
+                <div class="card">
+                    <a href="vivarelli2.html"> <img src="../immagini/vivarelli/2.webp" alt=""> </a>
+                    <p> <strong>Ostelin</strong><br>Carlo Vivarelli, 1946 <br>Editoria </p>
+                </div>
+                <div class="card">
+                    <a href="vivarelli3.html"> <img src="../immagini/vivarelli/3.webp" alt=""> </a>
+                    <p> <strong>Calcio Colloidale</strong><br>Carlo Vivarelli, 1946 <br>Editoria </p>
+                </div>
+                <div class="card">
+                    <a href="vivarelli4.html"> <img src="../immagini/vivarelli/4.webp" alt=""> </a>
+                    <p> <strong>Minadex</strong><br>Carlo Vivarelli, 1946 <br>Editoria </p>
+                </div>
+                <div class="card">
+                    <a href="vivarelli5.html"> <img src="../immagini/vivarelli/5.webp" alt=""> </a>
+                    <p> <strong>Adexolin</strong><br>Carlo Vivarelli, 1946 <br>Editoria </p>
+                </div>
+                <div class="card">
+                    <a href="vivarelli6.html"> <img src="../immagini/vivarelli/6.webp" alt=""> </a>
+                    <p> <strong>Vitaplex</strong><br>Carlo Vivarelli, 1946 <br>Editoria </p>
+                </div>
         </div>
     </section>
 </main>
