--- a/progetti/vivarelli2.html
+++ b/progetti/vivarelli2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Stile Olivetti</title>
+    <title>Ostelin 800</title>
 </head>
 <body>
      <!-- Logo e Nav principale -->
@@ -32,7 +32,7 @@
 
 <main>
     <section class="testo-progetto">
-    <h2>Ostelin</h2> <!-- MODIFICARE -->
+    <h2>Ostelin 800</h2> <!-- MODIFICARE -->
     <p>Uno di una serie di volantini farmaceutici rivolti ai medici che Vivarelli ha ideato come art director dello Studio Boggeri. Il testo recita: "Super concentrati con vitamine A e D prodotti da Glaxo".
     </p> <!-- MODIFICARE -->
     </section>
@@ -54,7 +54,7 @@
                 </div>
                 <div class="card">
                     <a href="vivarelli3.html"> <img src="../immagini/vivarelli/3.webp" alt=""> </a>
-                    <p> <strong>Ostelin</strong><br>Carlo Vivarelli, 1946 <br>Editoria </p>
+                    <p> <strong>Calcio Colloidale</strong><br>Carlo Vivarelli, 1946 <br>Editoria </p>
                 </div>
                 <div class="card">
                     <a href="vivarelli4.html"> <img src="../immagini/vivarelli/4.webp" alt=""> </a>
