--- a/progetti/vivarelli4.html
+++ b/progetti/vivarelli4.html
@@ -32,7 +32,7 @@
 
 <main>
     <section class="testo-progetto">
-    <h2>Ostelin</h2> <!-- MODIFICARE -->
+    <h2>Minadex</h2> <!-- MODIFICARE -->
     <p>Uno di una serie di volantini farmaceutici rivolti ai medici che Vivarelli ha ideato come art director dello Studio Boggeri per promuovere un nuovo prodotto realizzato da Glaxo.
     </p> <!-- MODIFICARE -->
     </section>
@@ -53,11 +53,11 @@
             </div>
             <div class="card">
                 <a href="vivarelli2.html"> <img src="../immagini/vivarelli/2.webp" alt=""> </a>
-                <p> <strong>Ostelin</strong><br>Carlo Vivarelli, 1946 <br>Editoria </p>
+                <p> <strong>Ostelin 800</strong><br>Carlo Vivarelli, 1946 <br>Editoria </p>
             </div>
             <div class="card">
                 <a href="vivarelli3.html"> <img src="../immagini/vivarelli/3.webp" alt=""> </a>
-                <p> <strong>Ostelin</strong><br>Carlo Vivarelli, 1946 <br>Editoria </p>
+                <p> <strong>Calcio Colloidale</strong><br>Carlo Vivarelli, 1946 <br>Editoria </p>
             </div>
             <div class="card">
                 <a href="vivarelli5.html"> <img src="../immagini/vivarelli/5.webp" alt=""> </a>
