--- a/progetti/vivarelli5.html
+++ b/progetti/vivarelli5.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Stile Olivetti</title>
+    <title>Adexolin</title>
 </head>
 <body>
      <!-- Logo e Nav principale -->
@@ -32,7 +32,7 @@
 
 <main>
     <section class="testo-progetto">
-    <h2>Ostelin</h2> <!-- MODIFICARE -->
+    <h2>Adexolin</h2> <!-- MODIFICARE -->
     <p>Uno di una serie di volantini farmaceutici ideati da Vivarelli come direttore artistico dello Studio Boggeri per promuovere un farmaco per le malattie invernali.
     </p> <!-- MODIFICARE -->
     </section>
@@ -53,11 +53,11 @@
             </div>
             <div class="card">
                 <a href="vivarelli2.html"> <img src="../immagini/vivarelli/2.webp" alt=""> </a>
-                <p> <strong>Ostelin</strong><br>Carlo Vivarelli, 1946 <br>Editoria </p>
+                <p> <strong>Ostelin 800</strong><br>Carlo Vivarelli, 1946 <br>Editoria </p>
             </div>
             <div class="card">
                 <a href="vivarelli3.html"> <img src="../immagini/vivarelli/3.webp" alt=""> </a>
-                <p> <strong>Ostelin</strong><br>Carlo Vivarelli, 1946 <br>Editoria </p>
+                <p> <strong>Calcio Colloidale</strong><br>Carlo Vivarelli, 1946 <br>Editoria </p>
             </div>
             <div class="card">
                 <a href="vivarelli4.html"> <img src="../immagini/vivarelli/4.webp" alt=""> </a>
