--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
     <main>
 
 
-        <section class="testo-progetto">
+        <section class="testo-progetto-about">
             <h2>About</h2>
             <p>Benvenuti nell'archivio online dedicato ai talentuosi designer che hanno contribuito allo sviluppo dello Studio Boggeri. Siamo un gruppo di studenti universitari del corso di "Web Design" dell'Accademia di Belle Arti di Catania, guidati dal professore <a href="https://ciroesposito.com/" target="_blank">Ciro Esposito</a>.</p>
                 
