--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
                 <li><a href="studio.html">Studio</a></li>
                 <li><a href="designers.html">Designer</a></li>
                 <li><a href="projects.html">Progetti</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a class="nav-bold-about" href="about.html">About</a></li>
             </ul>
         </nav>
     </header>
@@ -39,7 +39,7 @@
                 
             <p>Il nostro obiettivo principale è quello di creare uno spazio virtuale che celebra l'eredità e il lavoro di designer di talento che hanno contribuito a dare forma allo Studio Boggeri. Il sito funge da testimonianza vivente della creatività e dell'innovazione che ha caratterizzato il lavoro svolto all'interno dello studio nel corso degli anni.</p>
                 
-            <p>Il nostro team è composto da tre membri: <a href="https://www.behance.net/gabriele_aliotta" target="_blank">Gabriele Aliotta</a>, <a href="https://www.instagram.com/simoghirly/" target="_blank">Simone Ghirlanda</a> e <a href="https://www.instagram.com/pri.exe/" target="_blank">Gabriele Palmieri</a>. Nel nostro archivio troverete una vasta gamma di manifesti, marchi, prodotti editoriali, pubblicitari e informazioni dettagliate su ogni designer che ha contribuito al successo dello Studio Boggeri. Grazie per averci visitato e vi invitiamo a esplorare il nostro archivio e ad apprezzare l'eccezionale lavoro svolto da questi brillanti designer.</p>
+            <p>Il nostro team è composto da tre membri: <a href="https://www.instagram.com/gabriele_aliotta/" target="_blank">Gabriele Aliotta</a>, <a href="https://www.instagram.com/simoghirly/" target="_blank">Simone Ghirlanda</a> e <a href="https://www.instagram.com/pri.exe/" target="_blank">Gabriele Palmieri</a>. Nel nostro archivio troverete una vasta gamma di manifesti, marchi, prodotti editoriali, pubblicitari e informazioni dettagliate su ogni designer che ha contribuito al successo dello Studio Boggeri. Grazie per averci visitato e vi invitiamo a esplorare il nostro archivio e ad apprezzare l'eccezionale lavoro svolto da questi brillanti designer.</p>
         </section>
 
         <section class="email">
