--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
 
             <div class="immagine-studio">
-                <img src="immagini/pngstudio.webp" alt="">
+                <a href="studio.html"><img src="immagini/pngstudio.webp" alt=""></a>
             </div>
         </div>
         <div class="cta-container">
@@ -108,32 +108,32 @@
         <h2>I DESIGNER</h2>
         <div class="grid1">
             <div class="card1">
-                <a href="designers/steiner.html"> <img src="immagini/designer/albe-steiner-foto.webp" alt=""></a>
+                <a href="designers/steiner.html"> <img class="imgdesigner" src="immagini/designer/albe-steiner-foto.webp" alt=""></a>
                 <h3>Albe Steiner</h3>
             </div>
 
             <div class="card1">
-                <a href="designers/carboni.html"> <img src="immagini/designer/erberto-carboni-foto.webp" alt=""> </a>
+                <a href="designers/carboni.html"> <img class="imgdesigner" src="immagini/designer/erberto-carboni-foto.webp" alt=""> </a>
                 <h3>Erberto Carboni</h3>
             </div>
 
             <div class="card1">
-                <a href="designers/grignani.html"> <img src="immagini/designer/franco-grignani-foto.webp" alt=""> </a>
+                <a href="designers/grignani.html"> <img class="imgdesigner" src="immagini/designer/franco-grignani-foto.webp" alt=""> </a>
                 <h3>Franco Grignani</h3>
             </div>
 
             <div class="card1">
-                <a href="designers/huber.html"> <img src="immagini/designer/max-huber.webp" alt=""> </a>
+                <a href="designers/huber.html"> <img class="imgdesigner" src="immagini/designer/max-huber.webp" alt=""> </a>
                 <h3>Max Huber</h3>
             </div>
 
             <div class="card1">
-                <a href="designers/ballmer.html"> <img src="immagini/designer/walter-ballmer-foto.webp" alt=""> </a>
+                <a href="designers/ballmer.html"> <img class="imgdesigner" src="immagini/designer/walter-ballmer-foto.webp" alt=""> </a>
                 <h3>Walter Ballmer</h3>
             </div>
 
             <div class="card1">
-                <a href="designers/munari.html"> <img src="immagini/designer/munari.webp" alt=""> </a>
+                <a href="designers/munari.html"> <img class="imgdesigner" src="immagini/designer/munari.webp" alt=""> </a>
                 <h3>Bruno Munari</h3>
             </div>
         </div>
