--- a/studio.html
+++ b/studio.html
@@ -22,7 +22,7 @@
     
         <nav>
             <ul>
-                <li><a href="studio.html">Studio</a></li>
+                <li><a class="nav-bold-studio" href="studio.html">Studio</a></li>
                 <li><a href="designers.html">Designer</a></li>
                 <li><a href="projects.html">Progetti</a></li>
                 <li><a href="about.html">About</a></li>
@@ -41,7 +41,7 @@
             </div>
 
             <div class="immagine-studio">
-                <img src="immagini/logo studio.webp" alt="">
+               <a href="index.html"><img src="immagini/logo studio.webp" alt=""></a>
             </div>
         </div>
     </section>
@@ -49,7 +49,7 @@
     <section class="studio">
         <div class="flex">
             <div class="immagine-studio2">
-                <img src="immagini/pngstudio.webp" alt="">
+                <a href="designers.html"><img src="immagini/pngstudio.webp" alt=""></a> 
             </div>
 
             <div class="testo">
