--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
       <ul>
           <li><a href="studio.html">Studio</a></li>
           <li><a href="designers.html">Designer</a></li>
-          <li><a href="projects.html">Progetti</a></li>
+          <li><a class="nav-bold-project" href="projects.html">Progetti</a></li>
           <li><a href="about.html">About</a></li>
       </ul>
   </nav>
