--- a/designers/calabresi.html
+++ b/designers/calabresi.html
@@ -36,7 +36,7 @@
             <div class="flex-designer">
                 <div class="testo">
                     <h2>Aldo Calabresi</h2>
-                    <p>Nato ad Adliswil, Svizzera, 1930. Ha studiato alla Scuola di arti e mestieri di Zurigo e ha iniziato a lavorare come tipografo. Dopo tre anni si trasferisce a Parigi. Nel 1954 entra a far parte dello Studio Boggeri di Milano diventando un importante protagonista della grafica italiana.</p>
+                    <p>Nato ad Adliswil, Svizzera, 1930. Ha studiato alla Scuola di arti e mestieri di Zurigo e ha iniziato a lavorare come tipografo. Dopo tre anni si trasferisce a Parigi. <span class="grassetto">Nel 1954 entra a far parte dello Studio Boggeri di Milano </span>un importante protagonista della grafica italiana.</p>
                     <p> Ha progettato numerose campagne pubblicitarie, brochure e marchi per importanti clienti come Pirelli, Roche e Supercortemaggiore (Agip). Nel 1963 lascia lo Studio Boggeri e fonda con Umberto Cappelli ed Ezio Bonini l'agenzia pubblicitaria CBC. L'agenzia ha servito prestigiose aziende tra cui Agfa, Alfa Romeo, Bassetti, Luigi Franchi, Superga, Fiera di Milano. Nel 1980 ha sviluppato un nuovo sistema di identità aziendale per Alfa Romeo. Morì nel 2004.</p>     
                 </div>
 
