--- a/designers/iliprandi.html
+++ b/designers/iliprandi.html
@@ -40,7 +40,7 @@
                         Suo padre commerciava in automobili.All'inizio si era iscritto alla Facoltà di Medicina e Chirurgia dell'Università degli Studi di Milano, ma in seguito si è trasferito all'Accademia di Brera per studiare pittura, diplomandosi nel 1949.</p>
                         <p>Poi ha studiato scenografia nel 1953 presso l'Accademia di belle arti di Brera. Inizia però da autodidatta l'attività di igraphic designer, ispirandosi ad Antonio Boggeri, Max Huber, Albe Steiner e Bruno Munari.Riesce ad ottenere a partire dai primi anni cinquanta importanti commissioni da aziende come Rai, La Rinascente, Roche, Honeywell, Standa, Fiat ed Electa.</p>
                         <p>A partire dagli anni sessanta lavora in qualità di art director per riviste quali ad esempio Popular Photography Italia, Fototeca, Sci nautico e Interni. Disegna le copertine per I dischi del sole.
-                        Progetta inoltre l'immagine coordinata per le Cucine RB, per Ankerfarm e per Stilnovo. Collabora con lo “studio Boggeri” assieme a gli altri grafici che hanno contribuito allo sviluppo della grafica in italia ed Internazionale.
+                        Progetta inoltre l'immagine coordinata per le Cucine RB, per Ankerfarm e per Stilnovo. <span class="grassetto">Collabora con lo “studio Boggeri” assieme a gli altri grafici che hanno contribuito allo sviluppo della grafica in italia ed Internazionale.</span>
                         </p>     
                 </div>
 
