--- a/designers/mari.html
+++ b/designers/mari.html
@@ -37,7 +37,7 @@
                 <div class="testo">
                     <h2>Enzo Mari</h2>
                     <p> Enzo Mari nasce nel 1932 a Novara e inizia la sua carriera come designer nel 1957, dopo aver studiato all’Accademia di Brera fino al 1956. Da giovane prende parte al movimento dell’Arte Cinetica, una corrente che avvicina l’opera d’arte al progetto industriale, e lì conosce Bruno Munari, che influenza molte delle sue opere. Negli anni Sessanta Enzo Mari incontra Lea Vergine, saggista e critica d’arte con cui instaura prima un rapporto professionale, seguito da un rapporto d’amore durato tutta la vita.</p>
-                    <p>Il rapporto tra Enzo Mari e Lea Vergine suscita grande scalpore, in quanto entrambi sono già sposati, tanto che quando vanno a vivere insieme vengono accusati di concubinaggio. Durante la sua carriera Enzo Mari è stato docente presso numerose università, tra cui il Politecnico di Milano e ha ottenuto numerosi riconoscimenti, tra cui cinque Compassi d’Oro di cui uno alla carriera nel 2011.</p>     
+                    <p>Il rapporto tra Enzo Mari e Lea Vergine suscita grande scalpore, in quanto entrambi sono già sposati, tanto che quando vanno a vivere insieme vengono accusati di concubinaggio. Durante la sua carriera Enzo Mari è stato docente presso numerose università, tra cui il Politecnico di Milano e <span class="grassetto">ha ottenuto numerosi riconoscimenti, tra cui cinque Compassi d’Oro di cui uno alla carriera nel 2011.</span></p>     
                 </div>
 
                 <div>
