--- a/designers/muratore.html
+++ b/designers/muratore.html
@@ -36,7 +36,7 @@
             <div class="flex-designer">
                 <div class="testo">
                     <h2>Remo Muratore</h2>
-                    <p>Nato nel 1912 a Chieri, in Piemonte. Si è laureato in architettura al Politecnico di Torino ed è stato apprendista in tipografia presso l'Istituto Grafico Bertieri, dove ha lavorato per la rivista Risorgimento Grafico. Dal 1938 al 1940 lavora presso il rinomato Studio Boggeri al servizio di importanti aziende come Max Meyer e Olivetti.</p>
+                    <p>Nato nel 1912 a Chieri, in Piemonte. Si è laureato in architettura al Politecnico di Torino ed è stato apprendista in tipografia presso l'Istituto Grafico Bertieri, dove ha lavorato per la rivista Risorgimento Grafico.<span class="grassetto"> Dal 1938 al 1940 lavora presso il rinomato Studio Boggeri al servizio di importanti aziende come Max Meyer e Olivetti.</span></p>
                     <p> Come designer indipendente, ha lavorato come consulente grafico per Midy Pharma e disegnato manifesti per Piccolo Teatro e copertine per le riviste Edizioni di Comunità, Campo Grafico e Urbanistica. Ha fondato con Luigi Veronesi la Scuola Rinascita di Design Pubblicitario di Milano, e ha insegnato all'Istituto d'Arte di Parma e all'Accademia di Belle Arti di Ravenna. Il suo lavoro è stato esposto alla 7a Triennale di Milano e nel 1954 ha ricevuto la 10a Medaglia d'Oro della Triennale. Morì nel 1983 a Milano, Lombardia.</p>     
                 </div>
 
