--- a/designers/sambonet.html
+++ b/designers/sambonet.html
@@ -36,7 +36,7 @@
             <div class="flex-designer">
                 <div class="testo">
                     <h2>Roberto Sambonet</h2>
-                    <p> Roberto Sambonet (1948-1995) è stato un famoso designer italiano, noto per il suo lavoro nel campo del design industriale e dell'architettura. È considerato una figura importante nel panorama del design italiano degli anni '70 e '80.
+                    <p> Roberto Sambonet (1948-1995) è stato un famoso designer italiano, noto per il suo lavoro nel campo del design industriale e dell'architettura. <span class="grassetto">È considerato una figura importante nel panorama del design italiano degli anni '70 e '80.</span>
                         Nato a Torino, in Italia, nel 1948, Sambonet si è laureato in Architettura presso il Politecnico di Torino nel 1973.</p>
                         <p> Successivamente, ha lavorato come designer e architetto, sviluppando una vasta gamma di progetti nel corso della sua carriera.
                         Sambonet ha sperimentato diversi materiali e tecniche di produzione nel suo lavoro. Ha creato oggetti di design che spaziavano dalla progettazione di mobili e illuminazione all'industrial design, collaborando con diverse aziende italiane e internazionali.</p>
