--- a/designers/vivarelli.html
+++ b/designers/vivarelli.html
@@ -36,7 +36,7 @@
             <div class="flex-designer">
                 <div class="testo">
                     <h2>Carlo Vivarelli</h2>
-                    <p>Nato a Zurigo, Svizzera, 1919. Si è formato a Zurigo come graphic designer, quindi si è trasferito a Parigi per lavorare con Paul Colin. Nel 1946 si trasferisce a Milano diventando direttore artistico del famoso Studio Boggeri. Tornato a Zurigo, apre il proprio studio al servizio di prestigiosi clienti tra cui Electrolux, Glaxo, Philips, Roche e la Televisione Svizzera.</p>
+                    <p>Nato a Zurigo, Svizzera, 1919. Si è formato a Zurigo come graphic designer, quindi si è trasferito a Parigi per lavorare con Paul Colin.<span class="grassetto"> Nel 1946 si trasferisce a Milano diventando direttore artistico del famoso Studio Boggeri.</span> Tornato a Zurigo, apre il proprio studio al servizio di prestigiosi clienti tra cui Electrolux, Glaxo, Philips, Roche e la Televisione Svizzera.</p>
                     <p>Nel 1958 ha cofondato e ideato l'eccezionale rivista Neue Grafik, un capolavoro nella storia del design grafico che ha contribuito in modo fondamentale alla diffusione della tipografia svizzera. Oltre al suo lavoro nel graphic design, si è concentrato anche sulla pittura e sulla scultura come membro del movimento Konkrete Kunst. Muore a Zurigo nel 1986.</p>     
                 </div>
 
