--- a/designers/milani.html
+++ b/designers/milani.html
@@ -36,7 +36,7 @@
             <div class="flex-designer">
                 <div class="testo">
                     <h2>Armando Milani</h2>
-                    <p>Nasce a Milano nel 1940. Dal 1959 al 1963 ha studiato nella Scuola dell'Umanitaria di Milano con Albe Steiner. Nel 1965 apre il proprio studio a Milano e inizia a collaborare con Giulio Confalonieri e lo Studio Boggeri. Nel 1976 lo raggiunge il fratello Maurizio. L'anno dopo si è trasferito a New York City per lavorare presso Vignelli Associates su importanti programmi di identità aziendale.</p>
+                    <p>Nasce a Milano nel 1940. Dal 1959 al 1963 ha studiato nella Scuola dell'Umanitaria di Milano con Albe Steiner. Nel <span class="grassetto">apre il proprio studio a Milano e inizia a collaborare con Giulio Confalonieri e lo Studio Boggeri.</span> Nel 1976 lo raggiunge il fratello Maurizio. L'anno dopo si è trasferito a New York City per lavorare presso Vignelli Associates su importanti programmi di identità aziendale.</p>
                     <p> Nel corso della sua carriera ha servito prestigiosi clienti tra cui De Padova, Montecatini Edison, Roche, Touring Club Italiano e le Nazioni Unite per le quali ha disegnato un manifesto per la pace nel mondo che è diventato un classico mondiale. Membro dell'AGI. Socio Onorario AIAP. Ha insegnato ed esposto sia in Italia che all'estero, e il suo lavoro è stato pubblicato sulle più importanti riviste di design e libri sulla grafica.</p>     
                 </div>
 
